fix corn bg and right whitespace mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -94,7 +94,7 @@ nav {
 
 
 #productos {
-	background-image: url('/media/fondoProductos.jpg');
+	background-image: url('../media/fondoProductos.jpg');
 	background-size: cover;
 
 	.lista {
